<resources>
    <string name="app_name">Flash It</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="decks">Decks</string>
    <string name="profile_name">Username</string>
    <string name="profile_surname">Surname</string>
    <string name="profile_button">Submit</string>
    <string name="profile_age">Age</string>
    <string name="profileSignUp">Sign Up</string>
    <string name="profile_password">Password</string>
    <string name="profile_mail">someone@gmail.com</string>
    <string name="terms">By creating an account, you agree to our</string>
    <string name="terms2">Terms of Service and Privacy Policy</string>
    <string name="profile_log_in">Log in</string>
    <string name="db_drop">DROP TABLE IF EXISTS</string>
    <string name="TEST">TEST</string>
    <string name="yourDecks">Your decks</string>
    <string name="deckName">deckName</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enterDeckName">Enter your deck name</string>
    <string name="deck_name">Deck name</string>
    <string name="addDeck">Add</string>
    <string name="cancelDeck">Cancel</string>


    <string name="bottom_app_bar_chevron_content_desc">Open or close bottom navigation drawer</string>
    <string name="bottom_app_bar_logo_content_desc">Reply logo</string>
    <string name="bottom_nav_drawer_profile_image_content_desc">profile avatar image</string>
    <string name="fab_compose_email_content_description">Compose new email</string>
    <string name="fab_reply_email_content_description">Reply to email</string>

    <!--BottomSheet menus-->
    <string name="menu_item_forward">Forward</string>
    <string name="menu_item_reply">Reply</string>
    <string name="menu_item_reply_all">Reply all</string>
    <string name="menu_item_archive">Archive</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_star">Star</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_settings">Settings</string>

    <string name="menu_dark_theme_light">Light</string>
    <string name="menu_dark_theme_dark">Dark</string>
    <string name="menu_dark_theme_battery_saver">Set by Battery Saver</string>
    <string name="menu_dark_theme_system_default">System default</string>

    <!--BottomNavigationDrawer-->
    <string name="navigation_inbox">Inbox</string>
    <string name="navigation_starred">Starred</string>
    <string name="navigation_sent">Sent</string>
    <string name="navigation_trash">Trash</string>
    <string name="navigation_spam">Spam</string>
    <string name="navigation_drafts">Drafts</string>

    <!--HomeFragment-->
    <string name="email_sender_profile_content_desc">Profile image of sender</string>
    <string name="navigate_back_icon_content_desc">Navigate back</string>

    <!--EmailFragment-->
    <string name="email_recipient_to">To %1$s</string>
    <string name="email_card_transition_name">email_card_%1$s</string>
    <string name="email_card_detail_transition_name">email_card_detail</string>

    <!--ComposeFragment-->
    <string name="compose_close_content_desc">Close editing email</string>
    <string name="compose_send_content_desc">Send email</string>
    <string name="compose_add_recipient_icon_content_desc">Add recipient</string>
    <string name="compose_subject_hint">Subject</string>
    <string name="compose_body_hint">New message…</string>
    <string name="compose_recipient_group_content_desc">Recipients</string>

    <!--SearchFragment-->
    <string name="search_suggestion_hint">Search email</string>
    <string name="search_suggestion_title_yesterday">YESTERDAY</string>
    <string name="search_suggestion_title_this_week">THIS WEEK</string>
    <string name="dialogNewCard">New Card</string>
    <string name="cardFront">Enter front side</string>
    <string name="cardTranslation">Enter the translation</string>
    <string name="cardContext">Enter the context</string>
    <string name="total">\"Total: \"</string>
</resources>