<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialogNewDeck"
        android:layout_width="243dp"
        android:layout_height="32dp"
        android:layout_marginTop="0dp"
        android:text="@string/dialogNewCard"
        android:fontFamily="@font/work_sans_bold"
        android:textColor="@color/reply_blue_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialogCardFront"
        android:layout_width="243dp"
        android:layout_height="40sp"
        android:ems="10"
        android:textSize="18sp"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        android:fontFamily="@font/work_sans"
        android:inputType="textPersonName"
        android:layout_marginTop="12sp"
        android:background="@drawable/deck"
        android:hint="@string/cardFront"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogNewDeck"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/dialogCardTranslation"
        android:layout_width="243dp"
        android:layout_height="40sp"
        android:ems="10"
        android:textSize="18sp"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        android:fontFamily="@font/work_sans"
        android:inputType="textPersonName"
        android:layout_marginTop="12sp"
        android:background="@drawable/deck"
        android:hint="@string/cardTranslation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogCardFront"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/dialogCardContext"
        android:layout_width="243dp"
        android:layout_height="40sp"
        android:ems="10"
        android:textSize="18sp"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        android:fontFamily="@font/work_sans"
        android:inputType="textPersonName"
        android:layout_marginTop="12sp"
        android:background="@drawable/deck"
        android:hint="@string/cardContext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogCardTranslation"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/dialogButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/addDeck"
        app:layout_constraintStart_toEndOf="@+id/dialogButtonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogCardContext" />

    <Button
        android:id="@+id/dialogButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cancelDeck"
        app:layout_constraintEnd_toStartOf="@+id/dialogButtonAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogCardContext" />

</androidx.constraintlayout.widget.ConstraintLayout>