<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24sp">

    <TextView
        android:id="@+id/dialogNewDeck"
        android:layout_width="243dp"
        android:layout_height="32dp"
        android:layout_marginTop="0sp"
        android:fontFamily="@font/futura_medium"
        android:text="@string/enterDeckName"
        android:textColor="@color/blue_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/deckNameDialog"
        android:layout_width="243dp"
        android:layout_height="40sp"
        android:ems="10"
        android:textSize="18sp"
        android:paddingStart="12sp"
        android:paddingEnd="12dp"
        android:background="@drawable/deck"
        android:fontFamily="@font/futura_medium"
        android:inputType="textPersonName"
        android:layout_marginTop="12sp"
        android:hint="@string/deck_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogNewDeck"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/dialogButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/addDeck"
        app:layout_constraintStart_toEndOf="@+id/dialogButtonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deckNameDialog" />

    <Button
        android:id="@+id/dialogButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cancelDeck"
        app:layout_constraintEnd_toStartOf="@+id/dialogButtonAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deckNameDialog" />


</androidx.constraintlayout.widget.ConstraintLayout>