<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="451dp"
        android:background="@color/blue_profile"
        app:layout_constraintBottom_toTopOf="@+id/backgroundImageWave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/backgroundImageWave"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:background="@drawable/ic_wave1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundColor" />

    <TextView
        android:id="@+id/signUpSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/poppins"
        android:text="@string/profileSignUp"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profileName"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:paddingStart="20dp"
        android:fontFamily="@font/poppins"
        android:background="@drawable/input_back"
        android:drawableStart="@drawable/ic_profile"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/profile_name"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpSign"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/profilePassword"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:paddingStart="20dp"
        android:fontFamily="@font/poppins"
        android:background="@drawable/input_back"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/profile_password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileName"
        tools:ignore="RtlSymmetry" />


    <EditText
        android:id="@+id/profileEmail"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/input_back"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/profile_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePassword"
        app:layout_constraintVertical_bias="0.02"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/profileSubmit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:fontFamily="@font/poppins"
        android:text="@string/profile_button"
        android:textColor="@color/blue_profile"
        android:textSize="15sp"
        android:theme="@style/white"
        app:layout_constraintBottom_toTopOf="@+id/terms2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmail"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/terms"
        android:textAlignment="center"
        android:textColor="@color/blue_profile"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/terms2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileSubmit"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/terms2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/terms2"
        android:textAlignment="center"

        android:textColor="@color/blue_profile"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundImageWave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>